# agent-first-data

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  spore.core.json
.github/workflows/: ci.yml  release.yml
bash/: afdata.sh
cli/src/: main.rs
docs/: bash.md  cli.md  overview.md  protocol-v1.md  todo-logging-secret-names.md  transport-mappings.md
go/: README.md  afdata.go  afdata_builders_test.go  afdata_cli.go  afdata_cli_test.go  afdata_decode.go  afdata_decode_test.go  afdata_logging.go  afdata_logging_test.go  afdata_skill.go  afdata_skill_test.go  afdata_stream_redirect.go  afdata_stream_redirect_test.go  afdata_stream_redirect_unix.go  afdata_stream_redirect_unsupported.go  afdata_test.go  go.mod  no_stderr_policy_test.go  version.go
go/assets/skills/agent-first-data/: SKILL.md
go/assets/skills/agent-first-data/references/: protocol-v1.schema.json  registry.json  rules.md
go/examples/agent_cli/: main.go  main_test.go  sigpipe_other.go  sigpipe_unix.go
go/skill/: skill.go  skill_test.go
go/streamredirect/: streamredirect.go  streamredirect_test.go  streamredirect_unix.go  streamredirect_unsupported.go
python/: .gitignore  README.md  pyproject.toml
python/agent_first_data/: __init__.py  afdata_logging.py  cli.py  format.py  skill.py  stream_redirect.py
python/agent_first_data/assets/: protocol-v1.schema.json
python/agent_first_data/assets/skills/agent-first-data/: SKILL.md
python/agent_first_data/assets/skills/agent-first-data/references/: rules.md
python/examples/: agent_cli.py
python/tests/: test_afdata_logging.py  test_cli.py  test_format.py  test_no_stderr_policy.py  test_skill.py  test_stream_redirect.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: afdata_bench.rs  agent_cli.rs
rust/src/: afdata_tracing.rs  cli.rs  formatting.rs  help.rs  lib.rs  protocol.rs  redaction.rs  skill.rs  skill_validation.rs  stream_redirect.rs  tests.rs  validation.rs
rust/src/document/: coerce.rs  error.rs  file.rs  keyed.rs  mod.rs  path.rs  schema.rs  traverse.rs  typed.rs  value.rs
rust/src/document/format/: dotenv.rs  frontmatter.rs  ini.rs  json.rs  mod.rs  toml.rs  yaml.rs
scripts/: format.sh  sync_offline_assets.py  test.sh  validate_api_surface.py  validate_protocol_docs.py  validate_registry.py
skills/: agent-first-data.md
skills/agent-first-data/: SKILL.md
skills/agent-first-data/references/: rules.md
spec/: agent-first-data.md  api-surface.json  protocol-v1.schema.json
spec/fixtures/: helpers.json  number_fidelity.json  output_formats.json  protocol.json  protocol_streams.json  protocol_strict.json  redact.json  redact_argv.json  redact_url.json  redaction_options.json  security.json
tests/: bash_e2e.sh  cli_document.rs  cli_e2e.py  document_e2e.rs
tests/fixtures/dotenv/: core.env
tests/fixtures/ini/: core.ini  invalid.ini
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/assets/: registry.json
typescript/assets/skills/agent-first-data/: SKILL.md
typescript/assets/skills/agent-first-data/references/: rules.md
typescript/examples/: agent_cli.ts
typescript/src/: afdata_logging.test.ts  afdata_logging.ts  cli.test.ts  cli.ts  format.test.ts  format.ts  index.ts  no_stderr_policy.test.ts  skill.test.ts  skill.ts  stream_redirect.test.ts  stream_redirect.ts
