[project]
name = "agent-first-data"
version = "0.11.0"
description = "A naming convention that lets AI agents understand your data without being told what it means."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/agentfirstkit/agent-first-data"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
