[package]
name = "agent-first-data"
version = "0.7.2"
edition = "2021"
description = "Agent-First Data (AFDATA) — suffix-driven output formatting and protocol templates for AI agents"
license = "MIT"
repository = "https://github.com/cmnspore/agent-first-data"
readme = "README.md"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
serde_json = "1"
chrono = "0.4"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"], optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1.5"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
